--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -27,12 +27,11 @@ html
   box-sizing: inherit
 
 .app
+  font-family: 'Raleway'
   display: flex
   flex-direction: column
   flex-wrap: wrap
-  background-color: #FAFBE3
   //background: #FEF9F0
-  font-family: 'Hind'
 
 @-webkit-keyframes rotate
   from
@@ -57,10 +56,23 @@ header.header
   flex-direction: column
   height: 300px
   background: radial-gradient(ellipse at top, #1B2735 0%, #090A0F 100%)
-  overflow: hidden
+  //overflow: hidden
+  transition: all 1s ease;
+
+  &.minimized
+    height: 38px
+    position: fixed;
+    left: 0;
+    right: 0;
+    flex-direction: row
+
+    .header-top
+      align-items: flex-end
+      justify-content: flex-end
+      transition: all 1s ease
 
   .header-top
-    position: absolute
+    position: fixed
     left: 0
     right: 0
     display: flex
@@ -68,14 +80,42 @@ header.header
     justify-content: center
     color: #000
     padding: 10px
+    z-index: 5
     background: rgba(255,255,255,.7)
+    transition: background 1s ease;
+
     .nav
+      transition: all 1s ease
       ul
         text-transform: uppercase
 
         li
           display: inline-block
           padding-right: 20px
+
+          a
+            text-decoration: none
+            color: #000
+            font-size: 18px
+
+            &:hover
+              color: #fff
+
+  .title
+    margin: auto
+    text-align: center
+    color: #fff
+    z-index: 5
+    transition: color 1s ease
+
+    h1
+      font-size: 4em
+      font-weight: 300
+      text-shadow: 0 0 30px rgba(0,0,0,0.7)
+
+    h3
+      font-size: 1.5em
+      font-weight: 300
 
   .clouds
     overflow: hidden
@@ -85,6 +125,7 @@ header.header
     height: 295px
 
     .cloud
+      pointer-events: none
       position: absolute
       opacity: .2
 
@@ -125,22 +166,6 @@ header.header
         animation: rotate 130s linear infinite
         //z-index: 3
 
-
-  .title
-    margin: auto
-    //z-index: 111
-    text-align: center
-    color: #fff
-    //z-index: 0
-
-    h1
-      font-size: 4em
-      font-weight: 500
-
-    h3
-      font-size: 1.5em
-      font-weight: 300
-
   .stars-small
     width: 1px
     height: 1px
@@ -177,7 +202,7 @@ header.header
     width: 3px
     height: 3px
     background: transparent
-    animation : launch 50s linear infinite
+    animation: launch 50s linear infinite
     box-shadow: smallStarts
 
     &:after
@@ -189,7 +214,53 @@ header.header
       background: transparent
       box-shadow: smallStarts
 
-  .content
-    overflow: hidden
-    height: 500px
+    &:after
+      content: " "
+      width: 3px
+      height: 3px
+      background: #fff
+
+  .header-bottom
+    display: flex
+    justify-content: center
+    align-items: center
+    position: absolute
+    left: 0
+    right: 0
+    transform: translateY(-50%)
+    z-index: 10
+
+    img
+      width: 170px
+      height: 170px
+      border-radius: 100%
+      border: 3px solid #fff;
+      //transition: width .4s ease, height .4s ease
+
+  &.minimized .title
+    margin-left: 100px
+    color: #000
+    font-size: 0.3em
+
+    h3
+      display: none
+
+  &.minimized .header-bottom
+    transform: translateY(0%)
+    justify-content: flex-start
+
+    img
+      width: 75px
+      height: 75px
+      border: 2px solid #fff;
+      margin-left: 25px
+
+
+.content
+  overflow: hidden
+  height: 2500px
+
+
+
+
 
