Start to implement react

--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -91,7 +91,7 @@ header.header
     left: 0;
     right: 0;
     flex-direction: row
-    background: rgba(27, 39, 53, .9)
+    background: $azure
 
     .header-top
       align-items: flex-end
