--- a/app/styles/posts.styl
+++ b/app/styles/posts.styl
@@ -1,5 +1,60 @@
+@import 'variables'
+
 .posts
+  align-items: center
+
+  h1
+    font-size: 42px
+    color: $black
+    margin-bottom: 10px
+    font-weight: bold
+
   h2.section-name
     font-size: 32px
     font-weight: bold
+
+  h3
+    font-size: 28px
+
+  .blog-section
+    width: 500px
+    padding: 10px
+    margin-bottom: 80px
+
+    .blog-post
+
+      &-date
+        color: $gray
+        font-size: 20px
+        margin-right: 7px
+
+      a
+        font-size: 20px
+
+.post
+  align-items: center
+
+  h1
+    font-size: 42px
+    color: $black
+    margin-bottom: 10px
+    font-weight: bold
+
+  h2
+    font-size: 32px
+    color: $black
+    margin-bottom: 10px
+    font-weight: bold
+
+  h3
+    font-size: 24px
+    color: $black
+
+  h4
+    font-size: 20px
+    color: $black
+
+  p
+    font-size: 18px
+
 
