--- a/app/styles/about.styl
+++ b/app/styles/about.styl
@@ -20,6 +20,19 @@
         font-weight: 300
         color: $dark
 
+  .about-paragraph
+    border-top: 1px solid $gray-1
+    margin: 100px auto 20px auto
+    max-width: 600px
+    font-size: 20px
+
+    p
+      margin: 20px 0
+      line-height: 26px
+
+    strong
+      font-weight: bold
+
   .reviews
     padding: 0 14%
     margin: 100px auto 100px auto
