--- a/app/styles/contact.styl
+++ b/app/styles/contact.styl
@@ -1,3 +1,5 @@
+@import 'variables'
+
 .contact
   align-items: center
 
@@ -7,8 +9,14 @@
 
   ul
     li
-      padding: 5px
+      padding: 10px
       text-align: center
       a
         text-align: center
         font-size: 28px
+        margin-left: 10px
+
+      span
+        font-size: 28px
+        color: $gray-1
+        margin-left: 10px
