--- a/app/styles/variables.styl
+++ b/app/styles/variables.styl
@@ -2,6 +2,7 @@ $white  = #FFF
 $black  = #000
 $dark   = #404040
 $gray   = #888
+$gray-1 = #C8C8C8
 $anchor = #c05b4d
 $azure  = radial-gradient(ellipse at top, #1B2735 0%, #090A0F 100%)
 $glow   = 0 0px 15px rgba(59, 225, 255, .8)
