--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -291,11 +291,14 @@ header.header
       border: 2px solid $white;
       margin-left: 25px
 
+.footer
+  text-align: center
+  margin: 60px
+
 
 .content
   display: flex
   margin-top: 120px
   flex-direction: column
-  height: 1300px //DEV
   background: $white
   transition: all .8s ease
