--- a/app/styles/posts.styl
+++ b/app/styles/posts.styl
@@ -2,6 +2,10 @@
 
 .posts
   align-items: center
+  height: 85%
+  display: flex
+  align-items: center
+  justify-content: center
 
   h1
     font-size: 42px
