--- a/app/styles/contact.styl
+++ b/app/styles/contact.styl
@@ -2,12 +2,18 @@
 
 .contact
   align-items: center
+  height: 85%
+  display: flex
+  align-items: center
+  justify-content: center
 
   h1
     font-size: 48px
     margin-bottom: 10px
 
   ul
+    margin-top: 20px
+
     li
       padding: 10px
       text-align: center
