--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -267,6 +267,13 @@ header.header
     right: 0
     transform: translateY(-50%)
     z-index: 5
+    opacity: 0
+    //transform: scale(.5)
+    transition: opacity .5s ease
+
+    &.visible
+      opacity: 1
+      // transform: scale(1)
 
     img
       width: 170px
