--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -265,15 +265,14 @@ header.header
     position: absolute
     left: 0
     right: 0
-    transform: translateY(-50%)
+    transform: translateY(-50%) scale(.5)
     z-index: 5
     opacity: 0
-    //transform: scale(.5)
-    transition: opacity .5s ease
+    transition: opacity .3s ease, transform .3s ease
 
     &.visible
       opacity: 1
-      // transform: scale(1)
+      transform: translateY(-50%) scale(1)
 
     img
       width: 170px
